--- a/src/main/webapp/templates/template.xhtml
+++ b/src/main/webapp/templates/template.xhtml
@@ -31,6 +31,11 @@
                                         value="Manutenção de Medicamentos"
                                         ajax="false"/>     
                         </p:submenu>
+                        <p:submenu label="Consultas">
+                            <p:menuitem action="#{controleConsulta.listar()}"
+                                        value="Manutenção de Consultas"
+                                        ajax="false"/>                          
+                        </p:submenu>                  
                     </p:column>
                 </p:submenu>
             </p:megaMenu>
