--- a/src/main/webapp/templates/template.xhtml
+++ b/src/main/webapp/templates/template.xhtml
@@ -15,7 +15,7 @@
                 <p:menuitem value="Início"
                             url="#{facesContext.externalContext.requestContextPath}/index.xhtml"
                             icon="pi pi-home"/>
-                <p:submenu label="Cadastros">
+                <p:submenu label="Cadastros" rendered="#{controleLogin.usuarioAutenticado != null}">
                     <p:column>
                         <p:submenu label="Básicos">
                             <p:menuitem action="#{controlePaciente.listar()}"
@@ -30,18 +30,37 @@
                             <p:menuitem action="#{controleMedicamento.listar()}"
                                         value="Manutenção de Medicamentos"
                                         ajax="false"/>     
+                            <p:menuitem action="#{controleUsuario.listar()}"
+                                        value="Manutenção de Usuários"
+                                        ajax="false"/> 
                         </p:submenu>
                         <p:submenu label="Consultas">
                             <p:menuitem action="#{controleConsulta.listar()}"
                                         value="Manutenção de Consultas"
                                         ajax="false"/>                          
-                        </p:submenu>                  
+                        </p:submenu> 
+                    </p:column>
+                </p:submenu>
+                <p:submenu label="Usuário #{controleLogin.usuarioAutenticado != null ? 
+                                            controleLogin.usuarioAutenticado.nome : ''}">
+                    <p:column>
+                        <p:submenu label="Efetuar Login" 
+                                   rendered="#{controleLogin.usuarioAutenticado == null}">
+                            <p:menuitem action="#{controleLogin.paginaLogin()}"
+                                        value="Login" icon="pi pi-user"
+                                        ajax="false"/>
+                        </p:submenu> 
+                        <p:submenu label="Efetuar Logout" 
+                                   rendered="#{controleLogin.usuarioAutenticado != null}">
+                            <p:menuitem action="#{controleLogin.efetuarLogout()}"
+                                        value="Logout" icon="pi pi-power-off"
+                                        ajax="false"/>
+                        </p:submenu> 
                     </p:column>
                 </p:submenu>
             </p:megaMenu>
         </h:form>
         <ui:insert name="conteudo">
-
         </ui:insert>
         <ui:include src="ajaxstatus.xhtml"/>
     </h:body>
